Fix pixel alignment when using transform tool on pixel art

There were two problems:

1) KisTransformWorker accepted the offset measured in integers,
   which created a small drift of the whole image

2) KisFilterWeightsApplicator calculated the destination rect
   too aggressively. The formula might be okay for the filters
   that have whole-pixel support, but for half-pixel-support
   filters it caused issues.

BUG:413668